--- a/po/sq.po
+++ b/po/sq.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins 0.8.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-25 18:48+0200\n"
+"POT-Creation-Date: 2010-09-12 00:08+0100\n"
 "PO-Revision-Date: 2004-08-07 20:29+0200\n"
 "Last-Translator: Laurent Dhima <laurenti@alblinux.net>\n"
 "Language-Team: Albanian <begraj@hotmail.com>\n"
@@ -35,6 +35,31 @@ msgstr ""
 #, fuzzy
 msgid "Could not connect to server"
 msgstr "E pamundur mbyllja e dispozitivit të kontrollit \"%s\"."
+
+#, fuzzy
+msgid "Server does not support seeking."
+msgstr "Dispozitivi juaj OSS mund të mos provohet korrektësisht"
+
+#, fuzzy
+msgid "Could not resolve server name."
+msgstr "E pamundur mbyllja e dispozitivit të kontrollit \"%s\"."
+
+#, fuzzy
+msgid "Could not establish connection to server."
+msgstr "E pamundur mbyllja e dispozitivit të kontrollit \"%s\"."
+
+msgid "Secure connection setup failed."
+msgstr ""
+
+msgid ""
+"A network error occured, or the server closed the connection unexpectedly."
+msgstr ""
+
+msgid "Server sent bad data."
+msgstr ""
+
+msgid "No URL set."
+msgstr ""
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Input audio i gabuar ose mungon, stream AVI mund të jetë i dëmtuar."
@@ -658,10 +683,6 @@ msgstr ""
 
 #~ msgid "No device specified."
 #~ msgstr "Nuk është përcaktuar asnjë dispozitiv."
-
-#, fuzzy
-#~ msgid "Your OSS device doesn't support mono or stereo."
-#~ msgstr "Dispozitivi juaj OSS mund të mos provohet korrektësisht"
 
 #~ msgid "Could not close vfs file \"%s\"."
 #~ msgstr "E pamundur mbyllja e file vfs \"%s\"."
