--- a/po/ca.po
+++ b/po/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 0.9.7\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-25 18:48+0200\n"
+"POT-Creation-Date: 2010-09-12 00:08+0100\n"
 "PO-Revision-Date: 2005-12-04 21:54+0100\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <ca@dodds.net>\n"
@@ -34,6 +34,28 @@ msgid "Failed to decode JPEG image"
 msgstr ""
 
 msgid "Could not connect to server"
+msgstr ""
+
+msgid "Server does not support seeking."
+msgstr ""
+
+msgid "Could not resolve server name."
+msgstr ""
+
+msgid "Could not establish connection to server."
+msgstr ""
+
+msgid "Secure connection setup failed."
+msgstr ""
+
+msgid ""
+"A network error occured, or the server closed the connection unexpectedly."
+msgstr ""
+
+msgid "Server sent bad data."
+msgstr ""
+
+msgid "No URL set."
 msgstr ""
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
