--- a/po/da.po
+++ b/po/da.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good-0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-25 18:48+0200\n"
+"POT-Creation-Date: 2010-09-12 00:08+0100\n"
 "PO-Revision-Date: 2010-06-17 23:54+0200\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
@@ -40,6 +40,31 @@ msgstr "Mislykkedes i at afkode JPEG-billede"
 
 msgid "Could not connect to server"
 msgstr "Kunne ikke forbinde til server"
+
+#, fuzzy
+msgid "Server does not support seeking."
+msgstr "Enhed '%s' understøtter ikke videooptagelse"
+
+#, fuzzy
+msgid "Could not resolve server name."
+msgstr "Kunne ikke forbinde til server"
+
+#, fuzzy
+msgid "Could not establish connection to server."
+msgstr "Kunne ikke skabe kontakt til lyd-serveren"
+
+msgid "Secure connection setup failed."
+msgstr ""
+
+msgid ""
+"A network error occured, or the server closed the connection unexpectedly."
+msgstr ""
+
+msgid "Server sent bad data."
+msgstr ""
+
+msgid "No URL set."
+msgstr ""
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Ingen eller defekt inddatalyd, AVI-sekvens vil blive ødelagt."
@@ -671,9 +696,6 @@ msgstr "Kan ikke fungere uden et ur"
 
 #~ msgid "No free buffers found in the pool at index %d."
 #~ msgstr "Intet ledigt mellemlager fundet i puljen ved indeks %d."
-
-#~ msgid "Device '%s' does not support video capture"
-#~ msgstr "Enhed '%s' understøtter ikke videooptagelse"
 
 #~ msgid "Device '%s' cannot capture at %dx%d"
 #~ msgstr "Enhed '%s' kan ikke optage ved %dx%d"
