--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins 0.8.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-25 18:48+0200\n"
+"POT-Creation-Date: 2010-09-12 00:08+0100\n"
 "PO-Revision-Date: 2004-04-26 10:41-0400\n"
 "Last-Translator: Gareth Owen <gowen72@yahoo.com>\n"
 "Language-Team: English (British) <en_gb@li.org>\n"
@@ -35,6 +35,31 @@ msgstr ""
 #, fuzzy
 msgid "Could not connect to server"
 msgstr "Could not close control device \"%s\"."
+
+#, fuzzy
+msgid "Server does not support seeking."
+msgstr "Your oss device could not be probed correctly"
+
+#, fuzzy
+msgid "Could not resolve server name."
+msgstr "Could not close control device \"%s\"."
+
+#, fuzzy
+msgid "Could not establish connection to server."
+msgstr "Could not close control device \"%s\"."
+
+msgid "Secure connection setup failed."
+msgstr ""
+
+msgid ""
+"A network error occured, or the server closed the connection unexpectedly."
+msgstr ""
+
+msgid "Server sent bad data."
+msgstr ""
+
+msgid "No URL set."
+msgstr ""
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "No or invalid input audio, AVI stream will be corrupt."
@@ -699,10 +724,6 @@ msgstr ""
 
 #~ msgid "Could not close vfs file \"%s\"."
 #~ msgstr "Could not close vfs file \"%s\"."
-
-#, fuzzy
-#~ msgid "Your OSS device doesn't support mono or stereo."
-#~ msgstr "Your oss device could not be probed correctly"
 
 #~ msgid "No device specified."
 #~ msgstr "No device specified."
