--- a/po/es.po
+++ b/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 0.10.23.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-09-02 19:45+0100\n"
+"POT-Creation-Date: 2010-09-12 00:08+0100\n"
 "PO-Revision-Date: 2010-08-17 19:50+0200\n"
 "Last-Translator: Jorge González González <aloriel@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
@@ -37,6 +37,31 @@ msgstr "Falló al decodificar la imagen JPEG"
 
 msgid "Could not connect to server"
 msgstr "No se pudo conectar con el servidor"
+
+#, fuzzy
+msgid "Server does not support seeking."
+msgstr "El dispositivo «%s» no soporta captura de vídeo"
+
+#, fuzzy
+msgid "Could not resolve server name."
+msgstr "No se pudo conectar con el servidor"
+
+#, fuzzy
+msgid "Could not establish connection to server."
+msgstr "No se pudo establecer la conexión con el servidor de sonido"
+
+msgid "Secure connection setup failed."
+msgstr ""
+
+msgid ""
+"A network error occured, or the server closed the connection unexpectedly."
+msgstr ""
+
+msgid "Server sent bad data."
+msgstr ""
+
+msgid "No URL set."
+msgstr ""
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "El audio no existe o no es válido, el flujo AVI estará corrupto."
@@ -677,9 +702,6 @@ msgstr "No se puede operar sin reloj"
 
 #~ msgid "No free buffers found in the pool at index %d."
 #~ msgstr "No se encontraron búferes libres en el índice %d del «pool»."
-
-#~ msgid "Device '%s' does not support video capture"
-#~ msgstr "El dispositivo «%s» no soporta captura de vídeo"
 
 #~ msgid "Device '%s' cannot capture at %dx%d"
 #~ msgstr "El dispositivo «%s» no puede capturar a %dx%d"
