--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-25 18:48+0200\n"
+"POT-Creation-Date: 2010-09-12 00:08+0100\n"
 "PO-Revision-Date: 2010-05-21 09:52+0200\n"
 "Last-Translator: Luca Ferretti <elle.uca@infinito.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
@@ -35,6 +35,30 @@ msgstr "Decodifica dell'immagine JPEG non riuscita"
 
 msgid "Could not connect to server"
 msgstr "Impossibile connettersi al server"
+
+msgid "Server does not support seeking."
+msgstr ""
+
+#, fuzzy
+msgid "Could not resolve server name."
+msgstr "Impossibile connettersi al server"
+
+#, fuzzy
+msgid "Could not establish connection to server."
+msgstr "Impossibile stabilire la connessione al server audio"
+
+msgid "Secure connection setup failed."
+msgstr ""
+
+msgid ""
+"A network error occured, or the server closed the connection unexpectedly."
+msgstr ""
+
+msgid "Server sent bad data."
+msgstr ""
+
+msgid "No URL set."
+msgstr ""
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Ingresso audio assente o non valido. Lo stream AVI risulterà alterato."
