--- a/po/mt.po
+++ b/po/mt.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good-0.10.10.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-25 18:48+0200\n"
+"POT-Creation-Date: 2010-09-12 00:08+0100\n"
 "PO-Revision-Date: 2008-10-26 19:09+0100\n"
 "Last-Translator: Michel Bugeja <michelbugeja@rabatmalta.com>\n"
 "Language-Team: Maltese <translation-team-mt@lists.sourceforge.net>\n"
@@ -35,6 +35,31 @@ msgstr "Problem fid-decoding tal-istampa JPEG"
 
 msgid "Could not connect to server"
 msgstr "Mhux possibli naqbad mas-server"
+
+#, fuzzy
+msgid "Server does not support seeking."
+msgstr "Appart '%s' ma jagħmilx video capture"
+
+#, fuzzy
+msgid "Could not resolve server name."
+msgstr "Mhux possibli naqbad mas-server"
+
+#, fuzzy
+msgid "Could not establish connection to server."
+msgstr "Kuntatt mas-sound server ma ġiex stabbilit"
+
+msgid "Secure connection setup failed."
+msgstr ""
+
+msgid ""
+"A network error occured, or the server closed the connection unexpectedly."
+msgstr ""
+
+msgid "Server sent bad data."
+msgstr ""
+
+msgid "No URL set."
+msgstr ""
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Input audio ma nstabx jew mhux validu. AVI stream jista jkun korrott."
@@ -685,9 +710,6 @@ msgstr "Ma nistax nħaddem mingħajr arloġġ"
 
 #~ msgid "Device '%s' cannot capture at %dx%d"
 #~ msgstr "Appart '%s' ma jistax jagħmel capture bi %dx%d"
-
-#~ msgid "Device '%s' does not support video capture"
-#~ msgstr "Appart '%s' ma jagħmilx video capture"
 
 #~ msgid "No free buffers found in the pool at index %d."
 #~ msgstr "Ma nstab l-ebda buffer free fl-indiċi %d tal-pool."
