--- a/po/nb.po
+++ b/po/nb.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 0.10.6\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-25 18:48+0200\n"
+"POT-Creation-Date: 2010-09-12 00:08+0100\n"
 "PO-Revision-Date: 2007-11-03 14:42+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian Bokmaal <i18n-nb@lister.ping.uio.no>\n"
@@ -34,6 +34,31 @@ msgstr ""
 
 msgid "Could not connect to server"
 msgstr "Kunne ikke koble til tjener."
+
+#, fuzzy
+msgid "Server does not support seeking."
+msgstr "Enhet «%s» kan ikke fange data."
+
+#, fuzzy
+msgid "Could not resolve server name."
+msgstr "Kunne ikke koble til tjener."
+
+#, fuzzy
+msgid "Could not establish connection to server."
+msgstr "Kunne ikke koble til tjener."
+
+msgid "Secure connection setup failed."
+msgstr ""
+
+msgid ""
+"A network error occured, or the server closed the connection unexpectedly."
+msgstr ""
+
+msgid "Server sent bad data."
+msgstr ""
+
+msgid "No URL set."
+msgstr ""
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr ""
@@ -630,10 +655,6 @@ msgstr "Kan ikke operere uten en klokke"
 
 #, fuzzy
 #~ msgid "Device '%s' cannot capture at %dx%d"
-#~ msgstr "Enhet «%s» kan ikke fange data."
-
-#, fuzzy
-#~ msgid "Device '%s' does not support video capture"
 #~ msgstr "Enhet «%s» kan ikke fange data."
 
 #, fuzzy
