--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 0.10.23.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-25 18:48+0200\n"
+"POT-Creation-Date: 2010-09-12 00:08+0100\n"
 "PO-Revision-Date: 2010-06-28 21:00-0300\n"
 "Last-Translator: Fabrício Godoy <skarllot@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar.conectiva.com.br>\n"
@@ -40,6 +40,31 @@ msgstr "Falha ao decodificar a imagem JPEG"
 
 msgid "Could not connect to server"
 msgstr "Não foi possível conectar ao servidor"
+
+#, fuzzy
+msgid "Server does not support seeking."
+msgstr "Não há suporte a captura de vídeo no dispositivo \"%s\""
+
+#, fuzzy
+msgid "Could not resolve server name."
+msgstr "Não foi possível conectar ao servidor"
+
+#, fuzzy
+msgid "Could not establish connection to server."
+msgstr "Não foi possível estabelecer uma conexão com servidor de som"
+
+msgid "Secure connection setup failed."
+msgstr ""
+
+msgid ""
+"A network error occured, or the server closed the connection unexpectedly."
+msgstr ""
+
+msgid "Server sent bad data."
+msgstr ""
+
+msgid "No URL set."
+msgstr ""
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Entrada de áudio nula ou inválida, o fluxo AVI pode estar corrompido."
@@ -673,9 +698,6 @@ msgstr "Não é possível operar sem um temporizador"
 
 #~ msgid "No free buffers found in the pool at index %d."
 #~ msgstr "Nenhum buffer livre encontrado no reservatório, no índice %d."
-
-#~ msgid "Device '%s' does not support video capture"
-#~ msgstr "Não há suporte a captura de vídeo no dispositivo \"%s\""
 
 #~ msgid "Device '%s' cannot capture at %dx%d"
 #~ msgstr "O dispositivo \"%s\" não captura à %dx%d"
