--- a/po/tr.po
+++ b/po/tr.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 0.10.23.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-25 18:48+0200\n"
+"POT-Creation-Date: 2010-09-12 00:08+0100\n"
 "PO-Revision-Date: 2010-07-03 16:51+0200\n"
 "Last-Translator: Server Acim <serveracim@gmail.com>\n"
 "Language-Team: Turkish <gnu-tr-u12a@lists.sourceforge.net>\n"
@@ -33,6 +33,31 @@ msgstr "JPEG görüntüsünü çözümlenemedi"
 
 msgid "Could not connect to server"
 msgstr "Sunucuya bağlanamıyor"
+
+#, fuzzy
+msgid "Server does not support seeking."
+msgstr "Aygıt '%s' görüntü yakalamayı desteklemiyor"
+
+#, fuzzy
+msgid "Could not resolve server name."
+msgstr "Sunucuya bağlanamıyor"
+
+#, fuzzy
+msgid "Could not establish connection to server."
+msgstr "Ses sunucusuyla bağlantı kurulumayor"
+
+msgid "Secure connection setup failed."
+msgstr ""
+
+msgid ""
+"A network error occured, or the server closed the connection unexpectedly."
+msgstr ""
+
+msgid "Server sent bad data."
+msgstr ""
+
+msgid "No URL set."
+msgstr ""
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Geçerli bir ses girişi bulunamadı. AVI akışı kesilecek."
@@ -649,9 +674,6 @@ msgstr "Saat olmadan çalışamaz"
 
 #~ msgid "No free buffers found in the pool at index %d."
 #~ msgstr "Dizindeki %d havuzda boş bellek bulunamadı."
-
-#~ msgid "Device '%s' does not support video capture"
-#~ msgstr "Aygıt '%s' görüntü yakalamayı desteklemiyor"
 
 #~ msgid "Device '%s' cannot capture at %dx%d"
 #~ msgstr "Aygıt '%s' görüntü yakalayamadı%dx%d"
