--- a/po/uk.po
+++ b/po/uk.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 0.10.6\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-25 18:48+0200\n"
+"POT-Creation-Date: 2010-09-12 00:08+0100\n"
 "PO-Revision-Date: 2007-07-05 15:40+0200\n"
 "Last-Translator: Maxim V. Dziumanenko <dziumanenko@gmail.com>\n"
 "Language-Team: Ukrainian <translation-team-uk@lists.sourceforge.net>\n"
@@ -35,6 +35,31 @@ msgstr "Помилка при декодуванні зображення JPEG"
 
 msgid "Could not connect to server"
 msgstr "Не вдається з'єднатись з сервером"
+
+#, fuzzy
+msgid "Server does not support seeking."
+msgstr "Пристрій \"%s\" не підтримує захоплення відео"
+
+#, fuzzy
+msgid "Could not resolve server name."
+msgstr "Не вдається з'єднатись з сервером"
+
+#, fuzzy
+msgid "Could not establish connection to server."
+msgstr "Не вдається встановити з'єднання із звуковим сервером."
+
+msgid "Secure connection setup failed."
+msgstr ""
+
+msgid ""
+"A network error occured, or the server closed the connection unexpectedly."
+msgstr ""
+
+msgid "Server sent bad data."
+msgstr ""
+
+msgid "No URL set."
+msgstr ""
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Відсутній або неправильний вхід звуку, AVI потік буде пошкоджений."
@@ -662,9 +687,6 @@ msgstr "Робота без годинника неможлива"
 
 #~ msgid "Could not exchange data with device '%s'."
 #~ msgstr "Помилка при обміні даними з пристроєм \"%s\"."
-
-#~ msgid "Device '%s' does not support video capture"
-#~ msgstr "Пристрій \"%s\" не підтримує захоплення відео"
 
 #~ msgid "Device '%s' cannot capture at %dx%d"
 #~ msgstr "Пристрій \"%s\" не здатний захоплювати відео у форматі %dx%d"
