--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good-0.10.2 0.10.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-25 18:48+0200\n"
+"POT-Creation-Date: 2010-09-12 00:08+0100\n"
 "PO-Revision-Date: 2006-08-29 01:08+0800\n"
 "Last-Translator: Abel Cheung <abelcheung@gmail.com>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
@@ -33,6 +33,28 @@ msgid "Failed to decode JPEG image"
 msgstr ""
 
 msgid "Could not connect to server"
+msgstr ""
+
+msgid "Server does not support seeking."
+msgstr ""
+
+msgid "Could not resolve server name."
+msgstr ""
+
+msgid "Could not establish connection to server."
+msgstr ""
+
+msgid "Secure connection setup failed."
+msgstr ""
+
+msgid ""
+"A network error occured, or the server closed the connection unexpectedly."
+msgstr ""
+
+msgid "Server sent bad data."
+msgstr ""
+
+msgid "No URL set."
 msgstr ""
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
